adding of picture

--- a/clock.html
+++ b/clock.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>digital clock</title>
-    <link rel="stylesheet" href="clock.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Digital Clock</title>
+  <link rel="stylesheet" href="clock.css">
 </head>
 <body>
-    <div id="clock-co">
-        <div id="clock">00:00:00</div>
-    </div>
-    <script src="clock.js"></script>
+  <div class="clock">
+    <span id="hour"></span> :
+    <span id="minute"></span> :
+    <span id="second"></span>
+  </div>
+  <script src="clock.js"></script>
 </body>
 </html>
